<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_action_home"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_soillist"
            android:icon="@drawable/ic_action_gallery"
            android:title="@string/menu_soillist" />

        <item
            android:id="@+id/nav_license"
            android:icon="@drawable/ic_action_camera"
            android:title="@string/menu_license"
            />
        <item
            android:id="@+id/nav_acknowledgment"
            android:icon="@drawable/ic_menu_acknowledgment"
            android:title="@string/menu_acknowledgment"
            />
    </group>

</menu>
