<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_map">

    <fragment
        android:id="@+id/nav_map"
        android:name="csm.czechsoilmap.ui.home.HomeFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_soillist"
        android:name="csm.czechsoilmap.ui.gallery.GalleryFragment"
        android:label="@string/menu_soillist"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_license"
        android:name="csm.czechsoilmap.ui.license.LicenseFragment"
        android:label="@string/menu_license"
        tools:layout="@layout/fragment_license" />
    <fragment
        android:id="@+id/nav_acknowledgment"
        android:name="csm.czechsoilmap.ui.acknowledgment.AcknowledgmentFragment"
        android:label="@string/menu_acknowledgment"
        tools:layout="@layout/fragment_acknowledgment" />

</navigation>